<resources>
    <string name="app_name">Trello</string>
    <string name="sign_in_toolbar_text">Sign In</string>
    <string name="sign_up_toolbar_text">Sign Up</string>
    <string name="sign_up_greeting_text">Enter your name, email Id and password to register with us.</string>
    <string name="employee_managing_project">Employee managing project</string>
    <string name="intro_greeting">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Trello’s Minimalist Interface.</string>
    <string name="enter_name">Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="sign_in_greeting_text">Enter your name, email id and password, to register with us.</string>
    <string name="progress_please_wait">Please wait</string>
    <string name="please_click_back_again_exit">"Please click back again to exit. "</string>
    <string name="circle_iv_image">Image</string>
    <string name="main_nav_my_profile">My profile</string>
    <string name="task_list_nav">Task List</string>
    <string name="main_nav_sign_out">Sign out</string>
    <string name="update_btn">Update</string>
    <string name="enter_mobile">Mobile number</string>
    <string name="profile_updated_successfully">Profile updated successfully.</string>
    <string name="error_in_profile_update">Error in profile update</string>
    <string name="no_data_changed">Profile data not changed.</string>
    <string name="create_board_toolbar">Create board</string>
    <string name="create_btn">Create</string>
    <string name="board_name">Board name</string>
    <string name="no_boards_are_available">No boards available!</string>
    <string name="failed_to_load_boards">Failed to load boards.</string>
    <string name="item_task_add_List">Add List</string>
    <string name="item_task_list_name">List Name</string>
    <string name="title">Title</string>
    <string name="action_add_card">Add card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="are_you_sure_you_want_to_remove_member">Are you sure you want to remove %1$s?\nDon\'t worry %1$s\'s contributions will still there.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_nav_members">Members</string>
    <string name="member_add">Add member</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="search_member">Search member</string>
    <string name="label_color">Label color</string>
    <string name="select_member">Select member</string>
    <string name="select_due_date">Select due date</string>
    <string name="due_date">Due date</string>
    <string name="select_label_color">"Select label color</string>
    <string name="no_color">No color</string>
    <string name="select">Select</string>
    <string name="created_by">Created by %1$s</string>
    <string name="done">Done</string>
    <string name="default_notification_channel_id">Trello default notification channel Id</string>
</resources>