<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/member_dialog_padding10">

            <TextView
                android:id="@+id/dialog_search_tv_main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/member_dialog_view_margin_vertical3"

                android:padding="@dimen/member_item_margin_end5"
                android:text="@string/search_member"

                android:textSize="@dimen/drawer_item_text_size18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_view_height1"
                android:layout_marginVertical="@dimen/member_dialog_view_margin_vertical3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/member_dialog_til_member_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/member_dialog_btn_margin_top10"

                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/member_dialog_et_member_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:textSize="@dimen/description_text_size16" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/member_dialog_btn_margin_top10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_search_btn_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"


                    android:text="@string/cancel"

                    android:textSize="@dimen/custom_dialog_text_size18" />

                <Button
                    android:id="@+id/dialog_search_btn_add"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/custom_dialog_text_margin10"
                    android:layout_weight="1"


                    android:text="@string/add"

                    android:textSize="@dimen/custom_dialog_text_size18" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>