<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/sign_in_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:id="@+id/sign_in_tv_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in_toolbar_text" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"

                android:gravity="center"
                android:lineSpacingExtra="@dimen/description_line_space_extra5"
                android:text="@string/sign_in_greeting_text"

                android:textSize="@dimen/description_text_size16" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_in_til_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"

                        >

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/sign_in_et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"

                            android:textSize="@dimen/description_text_size16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_in_til_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="8dp"

                        >

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/sign_in_et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:maxLines="1"

                            android:textSize="@dimen/description_text_size16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/sign_in_btn_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="15dp"


                        android:paddingVertical="8dp"
                        android:text="@string/sign_in_toolbar_text"
                        android:textAllCaps="true"

                        android:textSize="18sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>